--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babel-preset-enact-app",
   "version": "1.0.0",
-  "description": "Babel preset used by Enact CLI",
+  "description": "Babel preset used by Enact",
   "repository": {
     "type": "git",
     "url": "https://github.com/enactjs/babel-preset-enact-app.git"
