--- a/package.json
+++ b/package.json
@@ -8,20 +8,17 @@
   },
   "homepage": "https://enactjs.com",
   "license": "Apache-2.0",
-  "files": [
-    "index.js"
-  ],
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.16.4",
-    "@babel/plugin-proposal-export-default-from": "7.18.9",
-    "@babel/plugin-transform-react-inline-elements": "7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.9",
+    "@babel/plugin-transform-react-inline-elements": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@babel/runtime": "^7.16.3",
-    "babel-plugin-dev-expression": "0.2.3",
-    "babel-plugin-dynamic-import-node": "2.3.3",
+    "babel-plugin-dev-expression": "^0.2.3",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24"
   }
 }
